@@ -38,6 +38,8 @@
     <Compile Include="Migrations\20210513102943_Person_IsFirstLogin_Added.Designer.cs" />
     <Compile Include="Migrations\20210518073239_ClientIpAddress_Removed.cs" />
     <Compile Include="Migrations\20210518073239_ClientIpAddress_Removed.Designer.cs" />
+    <Compile Include="Migrations\20210528105610_Categories_Target_Added.cs" />
+    <Compile Include="Migrations\20210528105610_Categories_Target_Added.Designer.cs" />
     <Compile Include="Migrations\ErmesDbContextModelSnapshot.cs" />
     <Compile Include="Migrations\Seed\ModelBuilderExtensions.cs" />
   </ItemGroup>
