@@ -12,7 +12,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "ShelterLocal"
+        "ASPNETCORE_ENVIRONMENT": "FasterLocal"
       }
     },
     "Ermes.Web": {
