@@ -1,6 +1,7 @@
 Ver.
 ---------------------------
 - Feature - GetCategories API made public
+- Feature - Categories refactoring (migration added)(#28)
 
 Ver. 1.5.5 - 2021-05-20
 ---------------------------
